# egressor

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum
deploy/: docker-compose.dev.yml
deploy/helm/egressor/: Chart.yaml  values.yaml
docs/architecture/: overview.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AnomalyList.tsx  ClaudeChat.tsx  CostChart.tsx  StatsCard.tsx  TopFlows.tsx  TransferGraph.tsx
scripts/: generate-mock-data.sh  mock-realtime.sh
src/: Dockerfile
src/cmd/agent/: main.go
src/cmd/api/: main.go
src/cmd/collector/: main.go
src/cmd/mockgen/: main.go
src/ebpf/: egress_monitor.c  flow_tracker.c
src/intelligence/: Dockerfile  pyproject.toml
src/intelligence/intelligence/: __init__.py  api.py  claude.py  config.py  egressor_client.py  main.py  models.py
src/internal/agent/: agent.go  k8s.go
src/internal/api/: server.go
src/internal/collector/: collector.go
src/internal/engine/: baseline.go  cost.go  graph.go
src/internal/storage/: clickhouse.go
src/pkg/ebpf/: loader.go
src/pkg/types/: anomaly.go  cost.go  transfer.go
tests/: .gitkeep
